# agentic-wallet

./: .env.example  .gitignore  AGENTS.md  README.md  cspell.json  gemma-4-E4B.ipynb  plan.md  pyproject.toml
docs/: android-spike.md  claude-blinded-author-prompt-v1.md  claude-blinded-author-shard-1-v1.md  claude-blinded-author-shard-1a-v2.md  claude-blinded-author-shard-1b-v2.md  claude-blinded-author-shard-2-v1.md  claude-blinded-author-shard-2a-v2.md  claude-blinded-author-shard-2b-v2.md  claude-blinded-author-shard-3-v1.md  claude-blinded-author-shard-3a-v2.md  claude-blinded-author-shard-3b-v2.md  claude-blinded-author-shard-4-v1.md  claude-blinded-author-shard-4a-v2.md  claude-blinded-author-shard-4b-v2.md  claude-blinded-author-shared-v1.md  claude-blinded-author-shared-v2.md  claude-blinded-eval-protocol.md  fine-tuning.md  independent-route-eval-v1.md  local-e2b.md  model-failures.md  sealed-eval-author-packet.md  sealed-eval-protocol.md  terra-blinded-author-procedure-v1.md  terra-blinded-author-procedure-v2.md  terra-blinded-author-procedure-v3.md  terra-blinded-author-procedure-v4.md  terra-blinded-author-procedure-v5.md  terra-blinded-author-shard-1a-v1.md  terra-blinded-author-shard-1a-v2.md  terra-blinded-author-shard-1a-v3.md  terra-blinded-author-shard-1a-v4.md  terra-blinded-author-shard-1a-v5.md  terra-blinded-author-shard-1b-v1.md  terra-blinded-author-shard-1b-v2.md  terra-blinded-author-shard-1b-v3.md  terra-blinded-author-shard-1b-v4.md  terra-blinded-author-shard-1b-v5.md  terra-blinded-author-shard-2a-v1.md  terra-blinded-author-shard-2a-v2.md  (+39 more)
(+270 files in other folders)
