[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-wallet"
version = "0.0.1"
description = "Private on-device crypto agent: typed schemas, workflow state machine, and a read-only harness."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "eth-utils>=5,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "nbstripout>=0.7",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]
ml = [
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.44",
    "pillow>=10",
    "peft>=0.11",
    "bitsandbytes>=0.43",
    "accelerate>=0.31",
    "datasets>=2.19",
]
signer = [
    "eth-account>=0.13.7,<0.14",
    "keyring>=25.7,<26",
    "mcp>=1.27,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
